event firing when song ends

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id=main></div>
+    <link src="/style.css" rel="stylesheet">
     <script async defer src=/bundle.js></script>    
   </body>
 </html> 
