smoothed out some redirect flows

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
   </head>
   <body>
     <div id=main></div>
+    <!-- GOOGLE MATERIAL DESIGN CSS DEPENDENCIES -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+	  <!-- LOCAL CSS DEPENDENCIES -->
     <link src="/style.css" rel="stylesheet">
     <script async defer src=/bundle.js></script>    
   </body>
 </html> 
+
+
