added support for material design icons

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+
+
 	  <!-- LOCAL CSS DEPENDENCIES -->
     <link src="/style.css" rel="stylesheet">
     <script async defer src=/bundle.js></script>    
