fb auth working, added sign-up component, styled login component

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 
 	  <!-- LOCAL CSS DEPENDENCIES -->
-    <link src="/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
     <script async defer src=/bundle.js></script>    
   </body>
 </html> 
