--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 	  <!-- LOCAL CSS DEPENDENCIES -->
     <link href="/style.css" rel="stylesheet">
