--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 	  <!-- LOCAL CSS DEPENDENCIES -->
-    <link href="/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bundle.css">
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <script async defer src=/bundle.js></script>    
   </body>
 </html> 
