finished grid config and styled login for mobile viewport

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 	  <!-- LOCAL CSS DEPENDENCIES -->
-    <link rel="stylesheet" href="/bundle.css">
+    <link rel="stylesheet" href="/stylesheets/bundle.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
     <script async defer src=/bundle.js></script>    
   </body>
