--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
@@ -16,8 +17,6 @@
 	  <!-- LOCAL CSS DEPENDENCIES -->
     <link rel="stylesheet" href="/stylesheets/bundle.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <script async defer src=/bundle.js></script>    
+    <script async defer src=/bundle.js></script>
   </body>
-</html> 
-
-
+</html>
