fix mui resizing

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
   <head>
-  </head>
-  <body>
-    <div id=main></div>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+
     <!-- GOOGLE MATERIAL DESIGN CSS DEPENDENCIES -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -14,9 +13,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-	  <!-- LOCAL CSS DEPENDENCIES -->
+    <!-- LOCAL CSS DEPENDENCIES -->
     <link rel="stylesheet" href="/stylesheets/bundle.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    
+  </head>
+  <body>
+    <div id=main></div>
     <script async defer src=/bundle.js></script>
   </body>
 </html>
