--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script type="text/javascript">document.documentElement.setAttribute("data-browser", navigator.userAgent)</script>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
     <!-- GOOGLE MATERIAL DESIGN CSS DEPENDENCIES -->
