style top ten for when empty

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- LOCAL CSS DEPENDENCIES -->
     <link rel="stylesheet" href="/stylesheets/bundle.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
-
+    <title>weJay - Everyone's a DJ</title>
   </head>
   <body>
     <div id=main></div>
