--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <script type="text/javascript">document.documentElement.setAttribute("data-browser", navigator.userAgent)</script>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+
     <!-- GOOGLE MATERIAL DESIGN CSS DEPENDENCIES -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
